@@ -19,45 +19,50 @@
 
 package org.kiji.schema;
 
+import com.google.common.base.Objects;
 import com.google.common.base.Preconditions;
+
+import org.apache.commons.lang.builder.HashCodeBuilder;
 import org.apache.hadoop.hbase.util.Bytes;
 
 import org.kiji.annotations.ApiAudience;
+import org.kiji.schema.util.KijiNameValidator;
 
 /**
  * A Kiji column name is composed of one or two parts: a family and a qualifier.
- * The qualifier is sometimes also referred to as the key.
- * If the column is of type map, the qualifier is null.
- * If the column is of type group, then the qualifier is required but may be empty.
+ * The qualifier can be either of map type or group type. If the column is of
+ * group type, the qualifier should ideally match VALID_LAYOUT_PATTERN. Empty
+ * qualifiers are normalized to null. That is, if fullName is of the form
+ * "family" or "family:", the qualifier will be treated as null. Qualifiers must
+ * be valid UTF-8.
  */
 @ApiAudience.Public
 public final class KijiColumnName implements Comparable<KijiColumnName> {
 
-  /** The full name of the column "family(:qualifier)?". */
-  private final String mFullName;
-
-  /** The column family name. */
+  /** The column family name must match VALID_LAYOUT_NAME_PATTERN. */
   private final String mFamily;
 
   /**
-   * The column qualifier name:
-   * <li> null means unqualified column.
-   * <li> empty string means qualifier "".
+   * The column qualifier name is:
+   * <li> either null meaning unqualified column
+   * <li> or nonempty UTF-8 String.
    */
   private final String mQualifier;
 
-  // Column family and qualifier names as byte arrays. Lazily initialized as needed.
-
-  private byte[] mFamilyBytes;
-  private byte[] mQualifierBytes;
-
   /**
    * Constructs a column name from a string "family" or "family:qualifier".
+   * Empty string qualifiers are normalized to null. That is, if fullName is
+   * of the form "family" or "family:", the qualifier will be treated as null.
    *
    * @param fullName The name of a kiji column "family:qualifier".
    */
   public KijiColumnName(String fullName) {
-    this(new Parser(Preconditions.checkNotNull(fullName)));
+    Preconditions.checkArgument(fullName != null,
+        "Column name may not be null. At least specify family");
+    final int colon = fullName.indexOf(":");
+    mFamily = colon < 0 ? fullName : fullName.substring(0, colon);
+    mQualifier = colon < 0 || fullName.length() == colon + 1 ? null : fullName.substring(colon + 1);
+    validateNames();
   }
 
   /**
@@ -65,85 +70,22 @@ public final class KijiColumnName implements Comparable<KijiColumnName> {
    *
    * @param family The kiji column family.
    * @param qualifier The kiji column qualifier: null means unqualified.
+   *   Empty string qualifiers are forced to be null.
    */
   public KijiColumnName(String family, String qualifier) {
-    this(makeFullName(Preconditions.checkNotNull(family), qualifier), family, qualifier);
-  }
-
-  /**
-   * Formats a column full name, given a family name and an optional qualifier.
-   *
-   * @param family Family name.
-   * @param qualifier Optional qualifier (null means unqualified).
-   * @return the column full name.
-   */
-  private static String makeFullName(String family, String qualifier) {
-    Preconditions.checkNotNull(family);
-    if (qualifier == null) {
-      return family;
-    } else {
-      return String.format("%s:%s", family, qualifier);
-    }
-  }
-
-  /**
-   * Constructs a column name from a parser.
-   *
-   * @param parser A parsed column name.
-   */
-  private KijiColumnName(Parser parser) {
-    this(parser.getFullName(), parser.getFamily(), parser.getQualifier());
-  }
-
-  /**
-   * Constructs a column name from the three parts: full name, family, qualifier.
-   *
-   * @param fullName The full column name.
-   * @param family The family.
-   * @param qualifier The qualifier (may be null).
-   */
-  private KijiColumnName(String fullName, String family, String qualifier) {
-    mFullName = fullName;
+    Preconditions.checkArgument(family != null, "Family name may not be null.");
     mFamily = family;
-    mQualifier = qualifier;
+    mQualifier = ("".equals(qualifier) ? null : qualifier);
+    validateNames();
   }
 
   /**
-   * Parses a column name into parts.
+   * Validates family names.
    */
-  private static class Parser {
-    private final String mFullName;
-    private final String mFamily;
-    private final String mQualifier;
-
-    /**
-     * Constructs a parser over an input column name.
-     *
-     * @param input The column name.
-     */
-    public Parser(String input) {
-      if (null == input) {
-        throw new NullPointerException("Column name may not be null");
-      }
-      int colon = input.indexOf(":");
-      mFullName = input;
-      mFamily = colon < 0 ? input : input.substring(0, colon);
-      mQualifier = colon < 0 ? null : input.substring(colon + 1);
-    }
-
-    /** @return The full column name. */
-    public String getFullName() {
-      return mFullName;
-    }
-
-    /** @return The family name. */
-    public String getFamily() {
-      return mFamily;
-    }
-
-    /** @return The qualifier name. */
-    public String getQualifier() {
-      return mQualifier;
+  private void validateNames() {
+    // Validate family name.
+    if (!KijiNameValidator.isValidLayoutName(mFamily)) {
+      throw new KijiInvalidNameException(String.format("Invalid family name: %s", mFamily));
     }
   }
 
@@ -153,7 +95,7 @@ public final class KijiColumnName implements Comparable<KijiColumnName> {
    * @return the full name of the column.
    */
   public String getName() {
-    return mFullName;
+    return (mQualifier == null ? mFamily : String.format("%s:%s", mFamily, mQualifier));
   }
 
   /**
@@ -166,22 +108,18 @@ public final class KijiColumnName implements Comparable<KijiColumnName> {
   }
 
   /**
-   * Gets the name of the column family as a byte array.
-   * Caches the result for subsequent calls. This method returns a shared
-   * array instance for all calls; do not modify the returned byte array.
+   * Gets the name of the column family as a UTF-8 byte array. This method
+   * does not cache the array. If expecting ubiquitous use, caller should
+   * cache the output.
    *
    * @return the family component of the column name.
    */
   public byte[] getFamilyBytes() {
-    if (null == mFamilyBytes) {
-      mFamilyBytes = Bytes.toBytes(mFamily);
-    }
-
-    return mFamilyBytes;
+    return Bytes.toBytes(mFamily);
   }
 
   /**
-   * Gets the name of the column qualifier, which may be null or empty.
+   * Gets the name of the column qualifier, which is either null or a non-empty UTF-8 String.
    *
    * @return the qualifier component of the column name.
    */
@@ -190,18 +128,14 @@ public final class KijiColumnName implements Comparable<KijiColumnName> {
   }
 
   /**
-   * Gets the name of the column qualifier as a byte array.
-   * Caches the result for subsequent calls. This method returns a shared
-   * array instance for all calls; do not modify the returned byte array.
+   * Gets the name of the column qualifier as a UTF-8 byte array. This method
+   * does not cache the array. If expecting ubiquitous use, caller should
+   * cache the output.
    *
-   * @return the qualifier component of the column name.
+   * @return The qualifier component of the column name or null if qualifier is unspecified.
    */
   public byte[] getQualifierBytes() {
-    if (null == mQualifierBytes) {
-      mQualifierBytes = Bytes.toBytes(mQualifier);
-    }
-
-    return mQualifierBytes;
+    return null == mQualifier ? null : Bytes.toBytes(mQualifier);
   }
 
   /**
@@ -230,18 +164,24 @@ public final class KijiColumnName implements Comparable<KijiColumnName> {
       return false;
     }
     final KijiColumnName other = (KijiColumnName) otherObj;
-    return mFullName.equals(other.mFullName);
+    return other.getFamily().equals(mFamily) && Objects.equal(other.getQualifier(), mQualifier);
   }
 
   /** {@inheritDoc} */
   @Override
   public int hashCode() {
-    return mFullName.hashCode();
+    return new HashCodeBuilder().append(mFamily).append(mQualifier).toHashCode();
   }
 
   /** {@inheritDoc} */
   @Override
-  public int compareTo(KijiColumnName o) {
-    return this.toString().compareTo(o.toString());
+  public int compareTo(KijiColumnName otherObj) {
+    final int comparison = this.mFamily.compareTo(otherObj.mFamily);
+    if (0 == comparison) {
+      return (this.isFullyQualified() ? mQualifier : "")
+          .compareTo(otherObj.isFullyQualified() ? otherObj.getQualifier() : "");
+    } else {
+      return comparison;
+    }
   }
 }
