@@ -25,7 +25,7 @@ import org.kiji.annotations.ApiAudience;
  * Thrown when a Kiji instance or table layout name is invalid.
  */
 @ApiAudience.Public
-public final class KijiInvalidNameException extends Exception {
+public final class KijiInvalidNameException extends RuntimeException {
   /**
    * Creates a new <code>KijiInvalidNameException</code> with the specified detail message.
    *
