@@ -3,6 +3,8 @@
                               Kiji Schema Release Notes
 
 Version 1.0.0-rc5
+  * SCHEMA-198. KijiColumnName validates family names using
+      KijiNameValidator. KijiInvalidNameException is unchecked.
   * SCHEMA-135. Clean up API for table layout backups.
 
 Version 1.0.0-rc4
